style: clean up